Add simple flask app for HTTP health check
The `/_status` endpoint will try to connect to the configured broker and
return a successfull response, otherwise an error will be returned.

This is because all Skyliner applications will get an ALB and have to
respond to HTTP requests.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,3 +10,10 @@ stdout_logfile=/dev/fd/1
 stderr_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
+
+[program:healthcheck]
+command=python healthcheck.py
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
