Support Amazon SQS as a message broker
 - Configure the AWS region and SQS queue name prefix when using SQS as
   the broker.  This configuration needs to match h's configuration when
   using SQS.

 - Add pycurl and boto3 dependencies required by Kombu's SQS support.
   The recommended way to do this is to use the `celery[sqs]` bundle but
   that includes the wrong version of boto in Celery 4.1.x. This is fixed
   in the unreleased Celery 4.2.x.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
+boto3  # for SQS (not using celery[sqs] because it uses wrong boto version)
 celery == 4.1.0
+ec2-metadata
+pycurl  # for SQS
 Flask
