Big WIP commit which splits out the H beat stuff and adds tests
This is to make way for adding another beat

--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -10,8 +10,8 @@ stderr_events_enabled=true
 stopsignal = KILL
 stopasgroup = true
 
-[program:beat]
-command=celery -b %(ENV_BROKER_URL)s -A h_periodic.beat beat
+[program:h-beat]
+command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h.beat beat
 stdout_events_enabled=true
 stderr_events_enabled=true
 stopsignal = KILL
