--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+envlist = tests
 skipsdist = true
 minversion = 3.16.1
 requires =
@@ -18,6 +19,7 @@ passenv =
     dev: DEBUG
 deps =
     dev: -r requirements/dev.txt
+    tests: -r requirements/tests.txt
     {format,checkformatting}: -r requirements/format.txt
     lint: -r requirements/lint.txt
     pip-tools<5.0.0
@@ -34,6 +36,10 @@ commands =
     format: isort --quiet --atomic h_periodic
     checkformatting: black --check h_periodic
     checkformatting: isort --quiet --check-only h_periodic
+    tests: coverage run -m pytest {posargs:tests/unit/}
+    tests: -coverage combine
+    tests: coverage report
+
 sitepackages = {env:SITE_PACKAGES:false}
 
 [testenv:dev]
