--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -11,8 +11,8 @@ stderr_logfile=NONE
 stdout_events_enabled=true
 stderr_events_enabled=true
 
-[program:beat]
-command=celery -b %(ENV_BROKER_URL)s -A h_periodic.beat beat
+[program:h-beat]
+command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat
 stdout_logfile=NONE
 stderr_logfile=NONE
 stdout_events_enabled=true
