--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -11,7 +11,14 @@ stopsignal = KILL
 stopasgroup = true
 
 [program:h-beat]
-command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat
+command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=celerybeat.pid
+stdout_events_enabled=true
+stderr_events_enabled=true
+stopsignal = KILL
+stopasgroup = true
+
+[program:checkmate-beat]
+command=celery -b %(ENV_CHECKMATE_BROKER_URL)s -A h_periodic.checkmate_beat beat --pidfile=checkmate-celerybeat.pid
 stdout_events_enabled=true
 stderr_events_enabled=true
 stopsignal = KILL
