--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -12,11 +12,18 @@ stdout_events_enabled=true
 stderr_events_enabled=true
 
 [program:h-beat]
-command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat
+command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=celerybeat.pid
 stdout_logfile=NONE
 stderr_logfile=NONE
 stdout_events_enabled=true
 stderr_events_enabled=true
+
+[program:checkmate-beat]
+command=celery -b %(ENV_CHECKMATE_BROKER_URL)s -A h_periodic.checkmate_beat beat --pidfile=checkmate-celerybeat.pid
+stdout_events_enabled=true
+stderr_events_enabled=true
+stopsignal = KILL
+stopasgroup = true
 
 [eventlistener:logger]
 command=bin/logger
