Apply formatting to the tests too and fix up some issues

--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,10 @@ commands =
     lint: pylint h_periodic
     lint: pydocstyle h_periodic
     lint: pycodestyle h_periodic
-    format: black h_periodic
-    format: isort --quiet --atomic h_periodic
-    checkformatting: black --check h_periodic
-    checkformatting: isort --quiet --check-only h_periodic
+    format: black h_periodic tests
+    format: isort --quiet --atomic h_periodic tests
+    checkformatting: black --check h_periodic tests
+    checkformatting: isort --quiet --check-only h_periodic tests
     tests: coverage run -m pytest {posargs:tests/unit/}
     tests: -coverage combine
     tests: coverage report
