Make linting apply to tests

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,9 @@ setenv =
 commands =
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
     lint: pylint h_periodic
+    lint: pylint --rcfile=tests/.pylintrc tests
     lint: pydocstyle h_periodic
+    lint: pydocstyle --config tests/.pydocstyle --explain tests
     lint: pycodestyle h_periodic
     format: black h_periodic tests
     format: isort --quiet --atomic h_periodic tests
