--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -11,7 +11,7 @@ stopsignal = KILL
 stopasgroup = true
 
 [program:h-beat]
-command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=celerybeat.pid
+command=celery -b %(ENV_H_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=h-celerybeat.pid
 stdout_events_enabled=true
 stderr_events_enabled=true
 stopsignal = KILL
