--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -12,7 +12,7 @@ stdout_events_enabled=true
 stderr_events_enabled=true
 
 [program:h-beat]
-command=celery -b %(ENV_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=celerybeat.pid
+command=celery -b %(ENV_H_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=h-celerybeat.pid
 stdout_logfile=NONE
 stderr_logfile=NONE
 stdout_events_enabled=true
