--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
 setenv =
     PYTHONUNBUFFERED = 1
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
-    BROKER_URL = amqp://guest:guest@localhost:5672//
+    H_BROKER_URL = amqp://guest:guest@localhost:5672//
     CHECKMATE_BROKER_URL = amqp://guest:guest@localhost:5673//
 commands =
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
