Enable logging so we can see what `h-periodic` is doing

--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -11,14 +11,14 @@ stopsignal = KILL
 stopasgroup = true
 
 [program:h-beat]
-command=celery -b %(ENV_H_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=h-celerybeat.pid
+command=celery -b %(ENV_H_BROKER_URL)s -A h_periodic.h_beat beat --pidfile=h-celerybeat.pid --loglevel INFO
 stdout_events_enabled=true
 stderr_events_enabled=true
 stopsignal = KILL
 stopasgroup = true
 
 [program:checkmate-beat]
-command=celery -b %(ENV_CHECKMATE_BROKER_URL)s -A h_periodic.checkmate_beat beat --pidfile=checkmate-celerybeat.pid
+command=celery -b %(ENV_CHECKMATE_BROKER_URL)s -A h_periodic.checkmate_beat beat --pidfile=checkmate-celerybeat.pid --loglevel INFO
 stdout_events_enabled=true
 stderr_events_enabled=true
 stopsignal = KILL
