Add `make shell`

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ passenv =
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
 deps =
+    dev: -e .
     dev: -r requirements/dev.txt
     tests: -r requirements/tests.txt
     {format,checkformatting}: -r requirements/format.txt
