--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ passenv =
     HOME
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
+    dev: DISABLE_H_BEAT
 deps =
     dev: -e .
     dev: -r requirements/dev.txt
