Revert "Remove Checkmate support"
This reverts commit 0806355e58dd3cc4eb7bf2a73331d6f2f79b5bc7.

--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -10,6 +10,13 @@ stderr_events_enabled=true
 stopsignal = KILL
 stopasgroup = true
 
+[program:checkmate-beat]
+command=celery -b %(ENV_CHECKMATE_BROKER_URL)s -A h_periodic.checkmate_beat beat --pidfile=checkmate-celerybeat.pid --loglevel INFO
+stdout_events_enabled=true
+stderr_events_enabled=true
+stopsignal = KILL
+stopasgroup = true
+
 [eventlistener:logger]
 command=bin/logger --dev
 buffer_size=100
