--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@
 h-celerybeat-schedule
 h-celerybeat-schedule.*
 h-celerybeat.pid
+checkmate-celerybeat-schedule
+checkmate-celerybeat-schedule.*
+checkmate-celerybeat.pid
 supervisord.log
 *.egg-info
