--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -11,6 +11,13 @@ stderr_logfile=NONE
 stdout_events_enabled=true
 stderr_events_enabled=true
 
+[program:checkmate-beat]
+command=celery -b %(ENV_CHECKMATE_BROKER_URL)s -A h_periodic.checkmate_beat beat --pidfile=checkmate-celerybeat.pid --loglevel INFO
+stdout_events_enabled=true
+stderr_events_enabled=true
+stopsignal = KILL
+stopasgroup = true
+
 [eventlistener:logger]
 command=bin/logger
 buffer_size=100
