Remove `make requirements` and add support for `hdev requirements`

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ parallel_show_output = true
 skip_install = true
 passenv =
     HOME
+    EXTRA_DEPS
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
     dev: DISABLE_H_BEAT
@@ -24,7 +25,7 @@ deps =
     tests: -r requirements/tests.txt
     {format,checkformatting}: -r requirements/format.txt
     lint: -r requirements/lint.txt
-    pip-tools<5.0.0
+    {env:EXTRA_DEPS:}
 setenv =
     PYTHONUNBUFFERED = 1
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
