--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,19 +4,41 @@
 #
 #    pip-compile requirements/requirements.in
 #
-amqp==2.6.1
+amqp==5.0.6
     # via kombu
-billiard==3.6.3.0
+billiard==3.6.4.0
     # via celery
-celery==4.4.7
+celery==5.1.0
     # via -r requirements/requirements.in
-kombu==4.6.11
+click-didyoumean==0.0.3
     # via celery
-pytz==2020.1
+click-plugins==1.1.1
     # via celery
+click-repl==0.2.0
+    # via celery
+click==7.1.2
+    # via
+    #   celery
+    #   click-didyoumean
+    #   click-plugins
+    #   click-repl
+kombu==5.1.0
+    # via celery
+prompt-toolkit==3.0.18
+    # via click-repl
+pytz==2021.1
+    # via celery
+six==1.16.0
+    # via click-repl
 supervisor==4.2.2
     # via -r requirements/requirements.in
-vine==1.3.0
+vine==5.0.0
     # via
     #   amqp
     #   celery
+    #   kombu
+wcwidth==0.2.5
+    # via prompt-toolkit
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
