--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,5 +12,6 @@ updates:
   schedule:
     interval: daily
   ignore:
-    # Allow only patch updates for docker images automatically
-    - update-types: ["version-update:semver-major", "version-update:semver-minor"]
+    # Only send PRs for patch versions of Python images
+    - dependency-name: "python"
+      update-types: ["version-update:semver-major", "version-update:semver-minor"]
