Separate tests and coverage commands
Have separate commands for running the unit tests (`make test` or
`tox -e tests`) and for running coverage (`make coverage` or
`tox -e coverage`). This is how it's done in other projects (bouncer, h,
lms).

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -52,4 +52,4 @@ jobs:
           ${{ runner.os }}-tox-
 
     - name: Run tox
-      run: tox --parallel auto -e checkformatting,lint
+      run: tox --parallel -e checkformatting,lint,tests,coverage
