--- a/tox.ini
+++ b/tox.ini
@@ -21,9 +21,12 @@ passenv =
 deps =
     dev: -r requirements/dev.txt
     tests: -r requirements/tests.txt
+    coverage: -r requirements/coverage.txt
     {format,checkformatting}: -r requirements/format.txt
     lint: -r requirements/lint.txt
     {env:EXTRA_DEPS:}
+depends =
+    coverage: tests
 setenv =
     PYTHONUNBUFFERED = 1
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
@@ -41,8 +44,8 @@ commands =
     checkformatting: black --check h_periodic tests
     checkformatting: isort --quiet --check-only h_periodic tests
     tests: coverage run -m pytest {posargs:tests/unit/}
-    tests: -coverage combine
-    tests: coverage report
+    coverage: -coverage combine
+    coverage: coverage report
 
 sitepackages = {env:SITE_PACKAGES:false}
 
