Add DISABLE_CHECKMATE_BEAT envvar
Fixes https://github.com/hypothesis/h-periodic/issues/114

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ passenv =
     EXTRA_DEPS
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
-    dev: DISABLE_H_BEAT
+    dev: DISABLE_*_BEAT
 deps =
     dev: -r requirements/dev.txt
     tests: -r requirements/tests.txt
