--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,6 @@ envlist = tests
 skipsdist = true
 minversion = 3.16.1
 requires =
-  tox-pip-sync
   tox-pyenv
   tox-envfile
   tox-run-command
@@ -14,17 +13,11 @@ parallel_show_output = true
 skip_install = true
 passenv =
     HOME
-    EXTRA_DEPS
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
     dev: DISABLE_*_BEAT
 deps =
-    dev: -r requirements/dev.txt
-    tests: -r requirements/tests.txt
-    coverage: -r requirements/coverage.txt
-    {format,checkformatting}: -r requirements/format.txt
-    lint: -r requirements/lint.txt
-    {env:EXTRA_DEPS:}
+    pip-tools
 depends =
     coverage: tests
 setenv =
@@ -32,6 +25,13 @@ setenv =
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
     H_BROKER_URL = amqp://guest:guest@localhost:5672//
     CHECKMATE_BROKER_URL = amqp://guest:guest@localhost:5673//
+whitelist_externals =
+    true
+# This is the command `true` not a value. This is here to disable tox's built
+# in listing of the environments. Which is pointless and slows us down
+list_dependencies = true
+commands_pre =
+    pip-sync requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
 commands =
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
     lint: pylint h_periodic
