--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ setenv =
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
     H_BROKER_URL = amqp://guest:guest@localhost:5672//
     CHECKMATE_BROKER_URL = amqp://guest:guest@localhost:5673//
+    LMS_BROKER_URL = amqp://guest:guest@localhost:5674//
 commands =
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
     lint: pylint h_periodic
