--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,7 @@
 *.pyc
 .coverage
 .coverage.*
-h-celerybeat-schedule
-h-celerybeat-schedule.*
-h-celerybeat.pid
-checkmate-celerybeat-schedule
-checkmate-celerybeat-schedule.*
-checkmate-celerybeat.pid
+*-celerybeat-schedule.*
+*-celerybeat.pid
 supervisord.log
 *.egg-info
