--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -18,6 +18,13 @@ stderr_events_enabled=true
 stopsignal = KILL
 stopasgroup = true
 
+[program:lms-beat]
+command=celery -b %(ENV_LMS_BROKER_URL)s -A h_periodic.lms_beat beat --pidfile=lms-celerybeat.pid --loglevel INFO
+stdout_events_enabled=true
+stderr_events_enabled=true
+stopsignal = KILL
+stopasgroup = true
+
 [eventlistener:logger]
 command=bin/logger
 buffer_size=100
