--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ passenv =
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
     dev: DISABLE_*_BEAT
+    dev: SENTRY_DSN
 deps =
     dev: -r requirements/dev.txt
     tests: -r requirements/tests.txt
