Add make requirements

--- a/tox.ini
+++ b/tox.ini
@@ -14,18 +14,12 @@ parallel_show_output = true
 skip_install = true
 passenv =
     HOME
-    EXTRA_DEPS
     {tests,functests}: PYTEST_ADDOPTS
     dev: DEBUG
     dev: DISABLE_*_BEAT
     dev: SENTRY_DSN
 deps =
-    dev: -r requirements/dev.txt
-    tests: -r requirements/tests.txt
-    coverage: -r requirements/coverage.txt
-    {format,checkformatting}: -r requirements/format.txt
-    lint: -r requirements/lint.txt
-    {env:EXTRA_DEPS:}
+    -r requirements/{env:TOX_ENV_NAME}.txt
 depends =
     coverage: tests
 setenv =
