--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = tests
 skipsdist = true
 minversion = 3.16.1
 requires =
-  tox-pip-sync
+  tox-faster
   tox-pyenv
   tox-envfile
   tox-run-command
@@ -29,6 +29,7 @@ setenv =
     CHECKMATE_BROKER_URL = amqp://guest:guest@localhost:5673//
     LMS_BROKER_URL = amqp://guest:guest@localhost:5674//
 commands =
+    pip-sync-faster requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
     lint: pylint h_periodic
     lint: pylint --rcfile=tests/.pylintrc tests
