--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
     uses: ./.github/workflows/continuous-integration.yml
     name: continuous integration
 
-  create-image:
+  Docker_Hub:
+    name: Docker Hub
     needs: continuous-integration
     uses: hypothesis/workflows/.github/workflows/dockerhub.yml@main
     with:
@@ -23,7 +24,7 @@ jobs:
     secrets: inherit
 
   QA:
-    needs: create-image
+    needs: Docker_Hub
     uses: hypothesis/workflows/.github/workflows/deploy.yml@main
     with:
       operation: deploy
@@ -31,11 +32,11 @@ jobs:
       aws_region: us-west-1
       elasticbeanstalk_application: h-periodic
       elasticbeanstalk_environment: qa
-      docker_tag: ${{ needs.create-image.outputs.docker_tag }}
+      docker_tag: ${{ needs.Docker_Hub.outputs.docker_tag }}
     secrets: inherit
 
   Production:
-    needs: [create-image, QA]
+    needs: [Docker_Hub, QA]
     uses: hypothesis/workflows/.github/workflows/deploy.yml@main
     with:
       operation: deploy
@@ -43,11 +44,11 @@ jobs:
       aws_region: us-west-1
       elasticbeanstalk_application: h-periodic
       elasticbeanstalk_environment: prod
-      docker_tag: ${{ needs.create-image.outputs.docker_tag }}
+      docker_tag: ${{ needs.Docker_Hub.outputs.docker_tag }}
     secrets: inherit
 
   Production_Canada:
-    needs: [create-image, QA]
+    needs: [Docker_Hub, QA]
     name: Production (Canada)
     uses: hypothesis/workflows/.github/workflows/deploy.yml@main
     with:
@@ -56,5 +57,5 @@ jobs:
       aws_region: ca-central-1
       elasticbeanstalk_application: h-periodic
       elasticbeanstalk_environment: prod
-      docker_tag: ${{ needs.create-image.outputs.docker_tag }}
+      docker_tag: ${{ needs.Docker_Hub.outputs.docker_tag }}
     secrets: inherit
