Apply the new `pyapp` cookiecutter to this project
Co-authored-by: Jon Betts <jon.betts@hypothes.is>

--- a/conf/supervisord-dev.conf
+++ b/conf/supervisord-dev.conf
@@ -1,6 +1,5 @@
 [supervisord]
 nodaemon = true
-environment=PYTHONUNBUFFERED="1"
 silent = true
 
 [program:h-beat]
@@ -24,7 +23,6 @@ stderr_events_enabled=true
 stopsignal = KILL
 stopasgroup = true
 
-
 [eventlistener:logger]
 command=bin/logger --dev
 buffer_size=100
@@ -32,3 +30,13 @@ events=PROCESS_LOG
 stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/null
+
+[unix_http_server]
+file = .supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl = unix://.supervisor.sock
+prompt = h-periodic
