--- a/requirements/lint.in
+++ b/requirements/lint.in
@@ -1,7 +1,7 @@
 pip-tools
-pip-sync-faster
+-r tests.txt
+-r functests.txt
+toml # Needed for pydocstyle to support pyproject.toml.
 pylint
 pydocstyle
 pycodestyle
--r requirements.txt
--r tests.txt
