--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-.tox/
+build
+coverage
+node_modules
+yarn-error.log
+.coverage*
+.tox
+*.egg-info
 *.pyc
-.coverage
-.coverage.*
+supervisord.log
+supervisord.pid
+.DS_Store
+.devdata.env
 *-celerybeat-schedule.*
 *-celerybeat.pid
-supervisord.log
-*.egg-info
