--- a/setup.cfg
+++ b/setup.cfg
@@ -7,25 +7,9 @@ ignore =
     E501,  # Line too long,
     W503,  # Line break before binary operator,
 
+    # "Comparison to None should be 'if cond is None:'.
+    # PyLint finds these so we don't need pycodestyle to.
+    E711,
+
     # Bare except. PyLint finds these for us so we don't need pycodestyle to.
     E722,
-
-[pydocstyle]
-ignore =
-    # Missing docstrings.
-    D100,D101,D102,D103,D104,D105,D106,D107,
-
-    # "No blank lines allowed after function docstring" conflicts with
-    # the Black code formatter, which insists on inserting blank lines after
-    # function docstrings.
-    D202,
-
-    # "1 blank line required before class docstring" conflicts with another
-    # pydocstyle rule D211 "No blank lines allowed before class docstring".
-    D203,
-
-    # Multi-line docstring summary should start at the first line, this
-    # conflicts with another pycodestyle rule "Multi-line docstring summary
-    # should start at the second line".
-    D212,
-
