--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-build
-coverage
-node_modules
-yarn-error.log
-.coverage*
-.tox
-*.egg-info
+.tox/
 *.pyc
-supervisord.log
-supervisord.pid
-.DS_Store
-.devdata.env
+.coverage
+.coverage.*
 *-celerybeat-schedule.*
 *-celerybeat.pid
+supervisord.log
+*.egg-info
