--- a/tox.ini
+++ b/tox.ini
@@ -1,52 +1,50 @@
 [tox]
 envlist = tests
 skipsdist = true
-minversion = 3.25.0
+minversion = 3.16.1
 requires =
-    tox-envfile
-    tox-faster
-    tox-run-command
+  tox-faster
+  tox-pyenv
+  tox-envfile
+  tox-run-command
+tox_pyenv_fallback = false
 
 [testenv]
+parallel_show_output = true
 skip_install = true
+passenv =
+    HOME
+    {tests,functests}: PYTEST_ADDOPTS
+    dev: DEBUG
+    dev: DISABLE_*_BEAT
+    dev: SENTRY_DSN
+deps =
+    -r requirements/{env:TOX_ENV_NAME}.txt
+depends =
+    coverage: tests
 setenv =
     PYTHONUNBUFFERED = 1
     OBJC_DISABLE_INITIALIZE_FORK_SAFETY = YES
-    # Make `import h_periodic` work in `make shell`.
-    dev: PYTHONPATH = .
     H_BROKER_URL = amqp://guest:guest@localhost:5672//
     CHECKMATE_BROKER_URL = amqp://guest:guest@localhost:5673//
     LMS_BROKER_URL = amqp://guest:guest@localhost:5674//
-passenv =
-    HOME
-    PYTEST_ADDOPTS
-    dev: DEBUG
-    dev: SENTRY_DSN
-    GUNICORN_CERTFILE
-    GUNICORN_KEYFILE
-    dev: DISABLE_*_BEAT
-deps =
-    pip-tools
-depends =
-    coverage: tests
-commands_pre =
-    pip-sync requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
 commands =
+    pip-sync-faster requirements/{env:TOX_ENV_NAME}.txt --pip-args '--disable-pip-version-check'
     dev: {posargs:supervisord -c conf/supervisord-dev.conf}
-    format: black h_periodic tests bin
-    format: isort --atomic h_periodic tests bin
-    checkformatting: black --check h_periodic tests bin
-    checkformatting: isort --quiet --check-only h_periodic tests bin
-    lint: pylint h_periodic bin
-    lint: pylint --rcfile=tests/pyproject.toml tests
-    lint: pydocstyle h_periodic tests bin
-    lint: pycodestyle h_periodic tests bin
-    dockercompose: docker-compose {posargs}
-    tests: coverage run -m pytest --failed-first --new-first --no-header --quiet {posargs:tests/unit/}
-    functests: pytest --failed-first --new-first --no-header --quiet {posargs:tests/functional/}
+    lint: pylint h_periodic
+    lint: pylint --rcfile=tests/.pylintrc tests
+    lint: pydocstyle h_periodic
+    lint: pydocstyle --config tests/.pydocstyle --explain tests
+    lint: pycodestyle h_periodic
+    format: black h_periodic tests
+    format: isort --quiet --atomic h_periodic tests
+    checkformatting: black --check h_periodic tests
+    checkformatting: isort --quiet --check-only h_periodic tests
+    tests: coverage run -m pytest {posargs:tests/unit/}
     coverage: -coverage combine
     coverage: coverage report
-    template: python3 bin/make_template {posargs}
+
+sitepackages = {env:SITE_PACKAGES:false}
 
 [testenv:dev]
 # By default when you Ctrl-c the `make dev` command tox is too aggressive about
