--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,16 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - '.cookiecutter/*'
+      - '.github/*'
+      - 'docs/*'
+      - 'requirements/*'
+      - '!requirements/prod.txt'
+      - 'tests/*'
+      - '**/.gitignore'
+      - '*.md'
+      - 'tox.ini'
 jobs:
   ci:
     name: CI
