--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,19 +32,6 @@ jobs:
     with:
       Application: ${{ github.event.repository.name }}
     secrets: inherit
-  qa:
-    name: QA
-    needs: [docker_hub]
-    uses: hypothesis/workflows/.github/workflows/deploy.yml@main
-    with:
-      operation: deploy
-      github_environment_name: QA
-      github_environment_url: https://my.papertrailapp.com/groups/22067362/events
-      aws_region: us-west-1
-      elasticbeanstalk_application: h-periodic
-      elasticbeanstalk_environment: qa
-      docker_tag: ${{ needs.Docker_Hub.outputs.docker_tag }}
-    secrets: inherit
   staging:
     name: Staging
     needs: [docker_hub]
@@ -60,7 +47,7 @@ jobs:
     secrets: inherit
   production:
     name: Production
-    needs: [docker_hub, qa]
+    needs: [docker_hub, staging]
     uses: hypothesis/workflows/.github/workflows/deploy.yml@main
     with:
       operation: deploy
@@ -73,7 +60,7 @@ jobs:
     secrets: inherit
   production_canada:
     name: Production (Canada)
-    needs: [docker_hub, qa]
+    needs: [docker_hub, staging]
     uses: hypothesis/workflows/.github/workflows/deploy.yml@main
     with:
       operation: deploy
